setup/7.IMMAD/ssl_certs/certificate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immad
  namespace: immad
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - immad.site
    secretName: immad-cert
  rules:
  - host: immad.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxy-public
            port: 
              number: 80
